tests/Fixture/Hello/Errors/Ability/MissingRole/Module.php
<?php

namespace Tests\Fixture\Hello\Errors\Ability\MissingRole;

use Tests\Fixture\Hello\HelloModule;

class Module extends HelloModule
{
}
